# embossers

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
man/: emboss-cons.1  emboss-consambig.1  emboss-domainalign.1  emboss-domainrep.1  emboss-esim4.1  emboss-est2genome.1  emboss-extractalign.1  emboss-matcher.1  emboss-megamerger.1  emboss-merger.1  emboss-needle.1  emboss-needleall.1  emboss-oalistat.1  emboss-seqalign.1  emboss-seqmatchall.1  emboss-stretcher.1  emboss-supermatcher.1  emboss-water.1  emboss-wordfinder.1  emboss-wordmatch.1  emboss.1
src/: common.rs  complex.rs  cons.rs  domainalign.rs  domainrep.rs  esim4.rs  est2genome.rs  extractalign.rs  lib.rs  matcher.rs  merger.rs  needle.rs  needleall.rs  oalistat.rs  seqalign.rs  seqmatchall.rs  stretcher.rs  supermatcher.rs  water.rs  wordfinder.rs  wordmatch.rs
