[package]
name = "embossers"
version = "0.1.12"
edition = "2021"
description = "EMBOSS-inspired bioinformatics utilities (Rust): complex (linguistic complexity), water (Smith–Waterman), needle (Needleman–Wunsch)."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://example.com/embossers"

[lib]
name = "embossers"
path = "src/lib.rs"

[[bin]]
name = "emboss"
path = "src/bin/emboss.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
csv = "1"
rand = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
